Comments: fixed the buttons to align together and aligned the tech stack header to the left

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2538,10 +2538,6 @@ input, select, textarea {
 		padding-left: 0;
 	}
 
-	ul.actions.BtnBottomHunny {
-		display: inline;
-	}
-
 		ul.actions li {
 			padding: 0 0 0 1em;
 			vertical-align: middle;
